Fix: Aligned Font Family

--- a/src/components/PublishLibrary.scss
+++ b/src/components/PublishLibrary.scss
@@ -20,7 +20,7 @@
         textarea {
           width: 70%;
           padding: 0.6em;
-          font-family: var(--ui-font);
+          font-family: $ui-font;
         }
 
         .required {
