--- a/src/components/Tooltip.scss
+++ b/src/components/Tooltip.scss
@@ -17,6 +17,8 @@
   text-align: center;
   font-size: 13px;
   font-weight: 500;
+
+  font-family: $ui-font;
   color: $oc-white;
 
   display: none;
