--- a/src/element/Hyperlink.scss
+++ b/src/element/Hyperlink.scss
@@ -25,7 +25,7 @@
     line-height: 24px;
     font-size: 0.9rem;
     font-weight: 500;
-    font-family: var(--ui-font);
+    font-family: $ui-font;
   }
 
   &-input {
